// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delivery Postcode renders a disable input 1`] = `
<label id="deliveryPostcodeField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryPostcode"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      <span data-reference="postcode">
        Postcode
      </span>
    </span>
    <span class="o-forms-title__prompt">
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryPostcode"
           name="deliveryPostcode"
           placeholder="Enter your Postcode"
           autocomplete="postal-code"
           data-trackable="delivery-postcode"
           aria-required="true"
           required
           pattern="whatever"
           disabled
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid
      <span data-reference="postcode">
        Postcode
      </span>
      .
    </span>
  </span>
</label>
`;

exports[`Delivery Postcode renders a postcode input with a label set as Postcode 1`] = `
<label id="deliveryPostcodeField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryPostcode"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      <span data-reference="postcode">
        Postcode
      </span>
    </span>
    <span class="o-forms-title__prompt">
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryPostcode"
           name="deliveryPostcode"
           placeholder="Enter your Postcode"
           autocomplete="postal-code"
           data-trackable="delivery-postcode"
           aria-required="true"
           required
           pattern="whatever"
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid
      <span data-reference="postcode">
        Postcode
      </span>
      .
    </span>
  </span>
</label>
`;

exports[`Delivery Postcode renders a postcode input with a label set as Zip Code 1`] = `
<label id="deliveryPostcodeField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryPostcode"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      <span data-reference="postcode">
        Postal Code
      </span>
    </span>
    <span class="o-forms-title__prompt">
      Please enter your postal code
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryPostcode"
           name="deliveryPostcode"
           placeholder="e.g. 60411"
           autocomplete="postal-code"
           data-trackable="delivery-postcode"
           aria-required="true"
           required
           pattern="whatever"
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid
      <span data-reference="postcode">
        Postal Code
      </span>
      .
    </span>
  </span>
</label>
`;

exports[`Delivery Postcode renders a postcode input with a label set as Zip Code with USA in lower case 1`] = `
<label id="deliveryPostcodeField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryPostcode"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      <span data-reference="postcode">
        Postal Code
      </span>
    </span>
    <span class="o-forms-title__prompt">
      Please enter your postal code
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryPostcode"
           name="deliveryPostcode"
           placeholder="e.g. 60411"
           autocomplete="postal-code"
           data-trackable="delivery-postcode"
           aria-required="true"
           required
           pattern="whatever"
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid
      <span data-reference="postcode">
        Postal Code
      </span>
      .
    </span>
  </span>
</label>
`;

exports[`Delivery Postcode renders a postcode input with a label set as postal code 1`] = `
<label id="deliveryPostcodeField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryPostcode"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      <span data-reference="postcode">
        Postal Code
      </span>
    </span>
    <span class="o-forms-title__prompt">
      Please enter your postal code
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryPostcode"
           name="deliveryPostcode"
           placeholder="e.g. M5H 3E5"
           autocomplete="postal-code"
           data-trackable="delivery-postcode"
           aria-required="true"
           required
           pattern="whatever"
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid
      <span data-reference="postcode">
        Postal Code
      </span>
      .
    </span>
  </span>
</label>
`;

exports[`Delivery Postcode renders a postcode input with default label 1`] = `
<label id="deliveryPostcodeField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryPostcode"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      <span data-reference="postcode">
        Postcode
      </span>
    </span>
    <span class="o-forms-title__prompt">
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryPostcode"
           name="deliveryPostcode"
           placeholder="Enter your Postcode"
           autocomplete="postal-code"
           data-trackable="delivery-postcode"
           aria-required="true"
           required
           pattern="whatever"
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid
      <span data-reference="postcode">
        Postcode
      </span>
      .
    </span>
  </span>
</label>
`;

exports[`Delivery Postcode renders different styles 1`] = `
<label id="deliveryPostcodeField"
       class="o-forms-field ncf__hidden"
       data-validate="required"
       for="deliveryPostcode"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      <span data-reference="postcode">
        Postcode
      </span>
    </span>
    <span class="o-forms-title__prompt">
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="deliveryPostcode"
           name="deliveryPostcode"
           placeholder="Enter your Postcode"
           autocomplete="postal-code"
           data-trackable="delivery-postcode"
           aria-required="true"
           required
           pattern="whatever"
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid
      <span data-reference="postcode">
        Postcode
      </span>
      .
    </span>
  </span>
</label>
`;

exports[`Delivery Postcode renders with link to change the value 1`] = `
<label id="deliveryPostcodeField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryPostcode"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      <span data-reference="postcode">
        Postal Code
      </span>
    </span>
    <span class="o-forms-title__prompt">
      Please enter your postal code
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryPostcode"
           name="deliveryPostcode"
           placeholder="e.g. 60411"
           autocomplete="postal-code"
           data-trackable="delivery-postcode"
           aria-required="true"
           required
           pattern="whatever"
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid
      <span data-reference="postcode">
        Postal Code
      </span>
      .
    </span>
    <a href="http://local.ft.com"
       style="font-size:12px"
       class="change-postcode-url"
       data-trackable="change-progress"
    >
      Change Postal Code
    </a>
  </span>
</label>
`;
